--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Мой Профиль</title>
+<title>MY APADTER</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 <style>
@@ -77,7 +77,7 @@ h1 {
 <canvas id="bg"></canvas>
 
 <div class="container">
-    <h1>Мой Профиль</h1>
+    <h1>MY APADTER</h1>
     <a class="contact-button" href="https://t.me/physicmurder" target="_blank"><i class="fab fa-telegram-plane"></i>Telegram: @physicmurder</a>
     <a class="contact-button" href="https://wa.me/77718135602" target="_blank"><i class="fab fa-whatsapp"></i>WhatsApp: +77718135602</a>
     <a class="contact-button" href="https://vk.com/physicmurder" target="_blank"><i class="fab fa-vk"></i>VK: physicmurder</a>
